# fuzzing-101-solutions

./: .gitignore  Cargo.toml  README.md
exercise-1/: Cargo.toml  build.rs
exercise-1/src/: main.rs
exercise-1/xpdf/: Makefile  aconf.h  config.status
exercise-1/xpdf/confstatVqidWf/: subs-1.sed  subs-2.sed  subs.sed
exercise-1/xpdf/fofi/: Makefile
exercise-1/xpdf/goo/: Makefile
exercise-1/xpdf/splash/: Makefile
exercise-1/xpdf/xpdf/: Makefile  pdffonts  pdfimages  pdfinfo  pdftotext
exercise-2/: Cargo.toml  Makefile.toml  README.md
exercise-2/src/: lib.rs
exercise-3/: Cargo.toml
exercise-3/corpus/: bootp-testcase.pcap
fuzzer-options/: Cargo.toml
