[package]
name = "exercise-one-solution"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# libafl = { path = "../../../LibAFL/libafl/",default-features = false}
# libafl_bolts = { path = "../../../LibAFL/libafl_bolts/",default-features = false}
libafl={version = "0.13.1"}
libafl_bolts={version = "0.13.1"}
libafl_cc = { version = "0.13.1" }
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.29", features = ["signal"] }
libafl_targets = { version="0.13.1", features = ["sancov_pcguard_hitcounts", "libfuzzer", "pointer_maps"] }
env_logger = "0.11"
