[package]
name = "exercise-3"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { version = "0.13.1" }
libafl_sugar = { version = "0.13.1" }
libafl_targets = { version = "0.13.1" }
libafl_qemu = {version = "0.13.1"}
clap = { version = "4.5.9", features = ["derive"] }
